# Gtk4Qr

./: .gitignore  flake.nix  meson.build
src/: dbusqrdecoder.in  main.py  meson.build  scanner.py
